# 4-Password-generator

./: .gitignore  README.md  pyproject.toml
src/password_gen/: __init__.py  charset.py  cli.py  generator.py
tests/: conftest.py  test_generator.py
