[project]

name = "password-gen"
version = "0.1.0"
description = "A secure password generator using Python's secrets module."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{ name = "Tacdin Özmen" }]

[project.scripts]
password-gen = "password_gen.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
